--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="d-flex bg-success">
-    <h1>Hello World!</h1>
-    <p>Hi there👋</p>
+    <div class="hero">
+    <p>👋Hello,I'm</p>
+    <h1>Patricia Pereira</h1>
+    <h2 class="mb-5">Front-end developer based in Portugal</h2>
+    <div class="btn btn-primary">
+    <a href="#" class="btn btn-branding">Contact Me</a>
+</div>
 </div>
 </body>
 </html>
