Added changes for work html file 	new file:   Images/Dictionary-1.jpg 	new file:   Images/Translation.jpg 	new file:   Images/Yogurt-1.jpg 	new file:   Images/weather-1.jpg 	modified:   Styles/project.css 	modified:   about.html 	new file:   work.html

--- a/work.html
+++ b/work.html
@@ -31,17 +31,22 @@
 </head>
 <body>
     <div class="content-container container">
-        <div class="row">
-            <div class="col-lg-6">
-              <div class="content">
-    <h1>Hi I am Patricia Pereira</h1>
-    <h2 class="mt-5">Frontend Developer, based in Portugal.</h2>
-    <p class="mt-5 mb-4">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged  with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
-    <a href="" class="btn btn-branding mb-2">View my projects</a>
-  </div>
+        <div class="content">
+    <h1 class="mb-5">Take a look at what I've been working on!</h1>
+    <div class="row">
+        <div class="col-md-6">
+    <img src="Images/Yogurt-1.jpg" alt="" class="img-fluid"/>
 </div>
-<div class="col-md-6">
-    <img src="Images/picture.jpg" alt="pic of me" class="img-fluid" />
+    <div class="col-md-6">
+    <img src="Images/weather-1.jpg" alt="" class="img-fluid" />
+</div>
+</div>
+<div class="row mt-2">
+    <div class="col-md-6">
+    <img src="Images/Dictionary-1.jpg" alt="" class="img-fluid"/>
+</div>
+    <div class="col-md-6">
+    <img src="Images/Translation.jpg" alt="" class="img-fluid" />
 </div>
 </div>
 </div>
