added final changes 	modified:   about.html 	modified:   contact.html 	modified:   index.html 	modified:   work.html

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
         <i class="fa-brands fa-facebook"></i>
         </a>
       </div>
+    <p class="text-center mt-3">✌️ This website was coded by Patricia, and is
+      <a href="https://github.com/harshi2309cmd/responsive_project">Open-soured</a>
+    </p>
       </footer>
     </div>
   </body>
