--- a/about.html
+++ b/about.html
@@ -24,12 +24,32 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/b6c82101fc.js" crossorigin="anonymous"></script>
     <script
       src="https://kit.fontawesome.com/ddc3ee268a.js"
       crossorigin="anonymous"
     ></script>
 </head>
 <body>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+      <img src="Images/logo.jpg" class="logo" alt="">
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+          </li>
+        <li>
+          <a href="work.html">Work</a>
+        </li>
+        <li>
+          <a href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
     <div class="content-container container">
         <div class="row">
             <div class="col-lg-6">
@@ -44,6 +64,34 @@
     <img src="Images/picture.jpg" alt="pic of me" class="img-fluid" />
 </div>
 </div>
+<footer>
+  <div class="contact-box d-flex justify-content-between mb-5">
+    <div>
+    <h4>Work Inquiry</h4>
+    <p class="text-muted">Let's work together</p>
+  </div>
+  <div>
+    <a href="" class="btn btn-branding">Contact me</a>
+  </div>
+</div>
+  <div class="d-flex justify-content-center">
+  <a href="mailto:patricia@gmail.com" class="email-link mb-2">patricia@gmail.com</a>
+</div>
+  <div class=" social-links d-flex justify-content-center">
+    <a href="">
+  <i class="fa-brands fa-instagram"></i>
+</a>
+<a href="">
+  <i class="fa-brands fa-github"></i>
+</a>
+<a href="">
+  <i class="fa-brands fa-facebook"></i>
+  </a>
+</div>
+<p class="text-center mt-3">✌️ This website was coded by Patricia, and is
+<a href="https://github.com/harshi2309cmd/responsive_project">Open-soured</a>
+</p>
+</footer>
 </div>
 </body>
 </html>
